--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,11 @@
     "angular-route": "~1.5.0",
     "angular-loader": "~1.5.0",
     "angular-mocks": "~1.5.0",
-    "html5-boilerplate": "^5.3.0"
+    "html5-boilerplate": "^5.3.0",
+    "lodash": "^4.17.2",
+    "jquery": "^3.1.1",
+    "moment": "^2.17.0",
+    "datetimepicker": "^2.5.4",
+    "bootstrap": "^3.3.7"
   }
 }
