--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "jquery": "^3.1.1",
     "moment": "^2.17.0",
     "datetimepicker": "^2.5.4",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "jquery-ui": "^1.12.1"
   }
 }
