--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "moment": "^2.17.0",
     "datetimepicker": "^2.5.4",
     "bootstrap": "^3.3.7",
-    "jquery-ui": "^1.12.1"
+    "jquery-ui": "^1.12.1",
+    "ng-file-upload": "^12.2.13"
   }
 }
